add new steps. update logic

--- a/caesar.html
+++ b/caesar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Login as <span id="caesar-name">Claudius Julius Caesar</span></h1>
+        <h1 class="title">Welcome, <span id="caesar-name">Claudius Julius Caesar</span></h1>
         <form id="code-form" class="form">
             <label for="code-input" class="label">Code:</label>
             <input type="text" id="code-input" class="input" autocomplete="off" autofocus>
