--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>What are you looking for?</title>
+    <title>What are you trying to find?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <p class="text" id="text-element">
-            What are you <span class="looking" id="looking-link">looking</span> for?
+            What are you trying to <span class="looking" id="find-link">find</span>?
         </p>
     </div>
     <script src="script.js"></script>
