--- a/mystery.html
+++ b/mystery.html
@@ -10,7 +10,7 @@
         .card { max-width:880px; width:100%; background: rgba(19,255,124,0.06); border:1px solid #13ff7c33; border-radius:12px; padding:32px 28px; box-shadow:0 0 24px #13ff7c22; }
         h1 { color:#00ff95; margin:0 0 20px; font-size:1.9rem; }
         p { line-height:1.8; margin:0 0 14px; color:#c9ffe5; }
-        .cta { margin-top: 18px; display:inline-block; background:#13ff7c; color:#0b0f10; text-decoration:none; border-radius:8px; padding:12px 18px; font-weight:700; }
+        .cta { margin-top: 18px; display:inline-block; background:#13ff7c; color:#0b0f10; text-decoration:none; border-radius:8px; padding:6px 16px; font-weight:700; }
         .cta:hover { background:#14ffb8; }
     </style>
 </head>
@@ -18,13 +18,16 @@
     <div class="container">
         <div class="card">
             <h1>Agent — well done.</h1>
-            <p>You have passed the induction. Your hands now hold the first fragment of the Archive Code.</p>
-            <p>This is only the beginning.</p>
-            <p>There is a sealed archive inside our walls. What it contains, and why it was hidden, is not yet known to us. The archive will open only to the correct code — a code pieced together across the week. One part is with you now. The rest waits in the rooms, on the walls, behind ordinary things that nobody thinks to look at.</p>
-            <p>Proceed to the next node and continue the hunt. All further instructions will come through the Agent Portal:</p>
+
+            <p>Your induction succeeded. This was a designed evaluation — a confirmation of intent and discretion. You passed.</p>
+            <p>You now possess the first fragment of the Archive Code: one part of a three-part cipher needed to unlock concealed material of operational value. Save it somewhere safe. The Archive will yield its contents only when the three fragments are combined in the correct order.</p>
+            <p>I've located and recorded a discrete hint that identifies the next fragment's location. It is not spelled out here. The hint is deliberate, narrow, and will reveal itself to those who know how to look.</p>
+            <p>Proceed to the next node and continue the retrieval. All further coordinates and verification instructions will be issued through the Agent Portal:</p>
             <p><strong>→ Use:</strong> <a class="cta" href="portal.html">Agent Portal</a></p>
-            <p>Trust your instincts. Stay curious. Stay invisible.</p>
-            <p>— KXS-025</p>
+            <p>Maintain silence. Verify before you trust. The file you seek is real; its guardians are patient.</p>
+
+            <p style="margin-top: 20px;">— KXS-025</p>
+
         </div>
     </div>
 </body>
