--- a/success.html
+++ b/success.html
@@ -10,12 +10,11 @@
     <div class="container">
         <div class="message">
             <h1 class="title">Access Granted</h1>
-            <p class="text">You successfully unlocked first of four parts of code:</p>
+            <p class="text">You successfully unlocked first of three parts of code:</p>
             <div class="code-display">
-                <span class="code-char">A</span>
-                <span class="code-char">3</span>
-                <span class="code-char">7</span>
-                <span class="code-char">K</span>
+                <span class="code-char">D</span>
+                <span class="code-char">T</span>
+                <span class="code-char">R</span>
             </div>
             <div style="margin-top:24px">
                 <button id="open-brief" class="button">Open Agent Brief</button>
