--- a/mystery.html
+++ b/mystery.html
@@ -23,7 +23,7 @@
             <p>You now possess the first fragment of the Archive Code: one part of a three-part cipher needed to unlock concealed material of operational value. Save it somewhere safe. The Archive will yield its contents only when the three fragments are combined in the correct order.</p>
             <p>I've located and recorded a discrete hint that identifies the next fragment's location. It is not spelled out here. The hint is deliberate, narrow, and will reveal itself to those who know how to look.</p>
             <p>Proceed to the next node and continue the retrieval. All further coordinates and verification instructions will be issued through the Agent Portal:</p>
-            <p><strong>→ Use:</strong> <a class="cta" href="portal.html">Agent Portal</a></p>
+            <p><strong>→ Use:</strong> <a class="cta" href="https://missing-stuff.netlify.app/portal.html">Agent Portal</a></p>
             <p>Maintain silence. Verify before you trust. The file you seek is real; its guardians are patient.</p>
 
             <p style="margin-top: 20px;">— KXS-025</p>
