--- a/success.html
+++ b/success.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="message">
             <h1 class="title">Access Granted</h1>
-            <p class="text">You successfully unlocked first of three parts of code:</p>
+            <p class="text">You successfully unlocked first of two parts of code:</p>
             <div class="code-display">
                 <span class="code-char">D</span>
                 <span class="code-char">T</span>
